Option spacing is fixed. Continued work on binding option values to submitAnswer.

--- a/Timed-Web-Test/styles.css
+++ b/Timed-Web-Test/styles.css
@@ -25,6 +25,11 @@ button{
     margin: 5px 5px;
 }
 
+label{
+    display: block;
+    margin-bottom: 15px;
+}
+
 #rules{
     line-height: 25px;
     word-spacing: 2px;
